[package]
name = "timely-affinity"
version = "0.1.0"
authors = ["Andrea Lattuada <andrea.lattuada@inf.ethz.ch>"]

[dependencies]
getopts = { version = "0.2.14" } # , optional = true}
timely_communication = { git = "https://github.com/utaal/timely-dataflow", branch = "thread-spawn-hook" }
timely = { git = "https://github.com/utaal/timely-dataflow", branch = "thread-spawn-hook" }
libc = "^0.2"
